Initial commit of bootstap css version of geocodes * protosearch component

--- a/alpha/website/templates/resultCard.html
+++ b/alpha/website/templates/resultCard.html
@@ -25,10 +25,13 @@
     </script>
 </head>
 <body class="container">
-<div class="row">
-    <div class=card" >
-        <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
-            line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+
+<div class="row ">
+    <div class="card my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+            </div>
         <div class="card-body">
             <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
                 N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
@@ -59,7 +62,182 @@
             </div>
         </div>
     </div>
+    <div class="card my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+        </div>
+        <div class="card-body">
+            <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
+                N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
+                transect were recorded along with substrate types and other organisms present. Surveys in Palau were
+                conducted from June 2nd to June 24th, 2017, and from June 25th to July 6th, 2017 in Yap. In Pohnpei
+                (6.2°N, 158.2°E) and Kosrae (5.3°N, 162.9°E) FSM, six 10-meter transects were used to measure the
+                benthic composition for every centimeter, at each site of 48 sites. Corals were recorded to species
+                level, except massive Porites and encrusting Montipora, which were recorded in the field as growth
+                forms. All other organisms along each transect were identified to the highest possible taxonomic
+                resolution.
+            </div>
 
+        </div>
+        <div class="card-footer " >
+            <span class="badge badge-info badge-pill ">Data</span>
+            <div class="btn-group  " >
+                <span class="btn btn-secondary dropdown " data-boundardy="window" aria-labelledby="dropdownMenuLink"> File</span>
+                <button type="button" class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <div  class="dropdown-menu" data-boundardy="window">
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">Download</a>
+
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">file Format x</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="card my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+        </div>
+        <div class="card-body">
+            <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
+                N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
+                transect were recorded along with substrate types and other organisms present. Surveys in Palau were
+                conducted from June 2nd to June 24th, 2017, and from June 25th to July 6th, 2017 in Yap. In Pohnpei
+                (6.2°N, 158.2°E) and Kosrae (5.3°N, 162.9°E) FSM, six 10-meter transects were used to measure the
+                benthic composition for every centimeter, at each site of 48 sites. Corals were recorded to species
+                level, except massive Porites and encrusting Montipora, which were recorded in the field as growth
+                forms. All other organisms along each transect were identified to the highest possible taxonomic
+                resolution.
+            </div>
+
+        </div>
+        <div class="card-footer " >
+            <span class="badge badge-info badge-pill ">Data</span>
+            <div class="btn-group  " >
+                <span class="btn btn-secondary dropdown " data-boundardy="window" aria-labelledby="dropdownMenuLink"> File</span>
+                <button type="button" class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <div  class="dropdown-menu" data-boundardy="window">
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">Download</a>
+
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">file Format x</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="card my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+        </div>
+        <div class="card-body">
+            <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
+                N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
+                transect were recorded along with substrate types and other organisms present. Surveys in Palau were
+                conducted from June 2nd to June 24th, 2017, and from June 25th to July 6th, 2017 in Yap. In Pohnpei
+                (6.2°N, 158.2°E) and Kosrae (5.3°N, 162.9°E) FSM, six 10-meter transects were used to measure the
+                benthic composition for every centimeter, at each site of 48 sites. Corals were recorded to species
+                level, except massive Porites and encrusting Montipora, which were recorded in the field as growth
+                forms. All other organisms along each transect were identified to the highest possible taxonomic
+                resolution.
+            </div>
+
+        </div>
+        <div class="card-footer " >
+            <span class="badge badge-info badge-pill ">Data</span>
+            <div class="btn-group  " >
+                <span class="btn btn-secondary dropdown " data-boundardy="window" aria-labelledby="dropdownMenuLink"> File</span>
+                <button type="button" class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <div  class="dropdown-menu" data-boundardy="window">
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">Download</a>
+
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">file Format x</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="card  my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+        </div>
+        <div class="card-body">
+            <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
+                N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
+                transect were recorded along with substrate types and other organisms present. Surveys in Palau were
+                conducted from June 2nd to June 24th, 2017, and from June 25th to July 6th, 2017 in Yap. In Pohnpei
+                (6.2°N, 158.2°E) and Kosrae (5.3°N, 162.9°E) FSM, six 10-meter transects were used to measure the
+                benthic composition for every centimeter, at each site of 48 sites. Corals were recorded to species
+                level, except massive Porites and encrusting Montipora, which were recorded in the field as growth
+                forms. All other organisms along each transect were identified to the highest possible taxonomic
+                resolution.
+            </div>
+
+        </div>
+        <div class="card-footer " >
+            <span class="badge badge-info badge-pill ">Data</span>
+            <div class="btn-group  " >
+                <span class="btn btn-secondary dropdown " data-boundardy="window" aria-labelledby="dropdownMenuLink"> File</span>
+                <button type="button" class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <div  class="dropdown-menu" data-boundardy="window">
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">Download</a>
+
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">file Format x</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
+    <div class="card  my-1" >
+        <div class="card-header">
+            <a class="card-title ">Transect data of coral species and other substrate types collected in the field using
+                line transects in Palau and Yap in 2017 and in the Federated States of Micronesia in 2018</a>
+        </div>
+        <div class="card-body">
+            <div class="card-text">As part of the reef-composition survey of Palau (7°30' N, 134°30' E) and Yap (9°32'
+                N, 138°7' E), 10-meter long, 2 to 5-meter depth transects were conducted. Coral species along the
+                transect were recorded along with substrate types and other organisms present. Surveys in Palau were
+                conducted from June 2nd to June 24th, 2017, and from June 25th to July 6th, 2017 in Yap. In Pohnpei
+                (6.2°N, 158.2°E) and Kosrae (5.3°N, 162.9°E) FSM, six 10-meter transects were used to measure the
+                benthic composition for every centimeter, at each site of 48 sites. Corals were recorded to species
+                level, except massive Porites and encrusting Montipora, which were recorded in the field as growth
+                forms. All other organisms along each transect were identified to the highest possible taxonomic
+                resolution.
+            </div>
+
+        </div>
+        <div class="card-footer " >
+            <span class="badge badge-info badge-pill ">Data</span>
+            <div class="btn-group  " >
+                <span class="btn btn-secondary dropdown " data-boundardy="window" aria-labelledby="dropdownMenuLink"> File</span>
+                <button type="button" class="btn btn-secondary dropdown-toggle" role="button" id="dropdownMenuLink"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <span class="caret"></span>
+                </button>
+                <div  class="dropdown-menu" data-boundardy="window">
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">Download</a>
+
+                    <a class="dropdown-item "><img src="../../../website/images/icons/download.svg" alt="" title="Download">file Format x</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
+
 </body>
 </html>
