--- a/alpha/website/css/spacelab/_variables.scss
+++ b/alpha/website/css/spacelab/_variables.scss
@@ -17,7 +17,7 @@ $gray-800: #333 !default;
 $gray-900: #2d2d2d !default;
 $black:    #000 !default;
 
-$blue:    #446e9b !default;
+$blue:    #0c3c60 !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
