css and js changes

--- a/alpha/website/css/main.css
+++ b/alpha/website/css/main.css
@@ -2,3 +2,8 @@ card-overrides {
     overflow-x: visible !important;
     overflow-y: visible !important;
 }
+
+.facetlist {
+    overflow-y:scroll;
+    max-height:20em;
+}
