hover over active facet. spacing between keywords

--- a/alpha/website/css/main.css
+++ b/alpha/website/css/main.css
@@ -7,3 +7,10 @@ card-overrides {
     overflow-y:scroll;
     max-height:20em;
 }
+.activeorderby,
+.activefacet {
+    font-weight: bold;
+}
+.facetitem  {
+    cursor: default;
+}
